<resources>
    <string name="app_name">SuperTeam</string>
    <string name="register">REGISTER</string>
    <string name="register_">Register</string>
    <string name="username">USERNAME</string>
    <string name="mob">MOBILE</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="search">SEARCH</string>
    <string name="register_text">Not a registered user?</string>
    <string name="signup">SIGN UP NOW</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="company_invitation">Company Invitation</string>
    <string name="reset">RESET</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">SETTINGS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="enter_code">Enter code</string>
    <string name="admin_setup">ADMIN SETUP</string>
    <string name="company_setup">Create Company</string>
    <string name="attendance_setup">Attendance</string>
    <string name="leave_setup">Leaves</string>
    <string name="holidays">Holidays</string>
    <string name="leaves">Leaves</string>
    <string name="payroll_setup">Payroll</string>
    <string name="roles_rights_setup">Roles &amp; Rights</string>
    <string name="advance_settings">ADVANCE SETTINGS</string>
    <string name="verify">VERIFY</string>
    <string name="re_generate">RESEND CODE</string>
    <string name="salary_type">SALARY TYPE</string>
    <string name="flat">FLAT</string>
    <string name="breakup">BREAKUP</string>
    <string name="holiday_setup">Holidays</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="add1">ADDRESS 1</string>
    <string name="add2">ADDRESS 2</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="country">COUNTRY</string>
    <string name="pincode">PINCODE</string>
    <string name="photo">PHOTO</string>
    <string name="resign_reason">Why do you want to resign from the company?</string>
    <string name="exising">EXISTING</string>
    <string name="invited">INVITED</string>
    <string name="resend">RESEND</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="company_mobile">COMPANY MOBILE</string>
    <string name="company_landline">COMPANY LANDLINE</string>
    <string name="company_email">COMPANY EMAIL</string>
    <string name="company_desc">COMPANY DESCRIPTION</string>
    <string name="logo">LOGO</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="skip">SKIP</string>
    <string name="spinner_segment">SEGMENT</string>
    <string-array name="segment_array">
        <item>Segment1</item>
        <item>Segment2</item>
        <item>Segment3</item>
        <item>Segment4</item>
        <item>Segment5</item>
    </string-array>
    <string-array name="leaves_array">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Annual</item>
    </string-array>
    <string name="include_payroll">Include Payroll</string>
    <string name="toggle_turn_on">ON</string>
    <string name="toggle_turn_off">OFF</string>
    <string name="clients">Customers</string>
    <string name="vendors">Vendors</string>
    <string name="add_client">Add Customer</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="update_client">Update Customer</string>
    <string name="update_vendor">Update Vendor</string>
    <string name="company_type">Company Type</string>
    <string name="client_type">TYPE</string>
    <string name="vendor_type">Vendor Type</string>
    <string name="address_type">Address Type</string>
    <string name="permanent_address">PERMANENT ADDRESS</string>
    <string name="pick_pos">Pick position on map</string>
    <string name="add_location">Add Location</string>
    <string name="update_location">Update Location</string>
    <string name="no_client">You\'ve not added any customer yet</string>
    <string name="no_vendor">You\'ve not added any vendor yet</string>
    <string name="client_description">A customer is a person/org who uses your services.</string>
    <string name="vendor_description">A vendor is a person/org who uses your services.</string>
    <string name="client_vendor_address">Saved Location</string>
    <string name="no_location_saved">No location is saved yet!!!!</string>
    <string name="location_approval">Location Approval Details</string>
    <string-array name="address_type_array">
        <item>Temporary</item>
        <item>Residential</item>
        <item>Factory</item>
    </string-array>
    <string-array name="company_type_array">
        <item>Trading</item>
        <item>Manufacturing</item>
        <item>Service</item>
    </string-array>
    <string name="client_name">NAME</string>
    <string name="client_mobile">MOBILE</string>
    <string name="client_landline">LANDLINE</string>
    <string name="client_email">EMAIL</string>
    <string name="client_desc">DESCRIPTION</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="updated_addresses">Updated Addresses</string>
    <string name="new_addresses">New Addresses</string>
    <string name="deleted_addresses">Deleted Addresses</string>
    <string name="old_address">Old Address</string>
    <string name="new_address">New Address</string>
    <string name="working_days">WORKING DAYS</string>
    <string name="working_hours">COMPANY TIME</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sun">S</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="late_coming">Late Entry Deductions</string>
    <string name="auto_leave_update">Enable automatic leave update</string>
    <string name="deducutionHour1">1 HOUR LATE</string>
    <string name="deducutionHour2">2 HOURS LATE</string>
    <string name="deducutionHour3">3 HOURS LATE</string>
    <string name="deducutionHour4">4 HOURS LATE</string>
    <string name="deducutionHour4On">4 HOURS ONWARDS</string>
    <string name="deducution_per">%</string>
    <string name="holiday_list">HOLIDAY LIST</string>
    <string name="update">UPDATE</string>
    <string name="withraw">WITHDRAW</string>
    <string name="title_activity_select_holiday">SelectHolidayActivity</string>
    <string name="select_holiday">Select Holiday</string>
    <string name="add_custom_holiday">Add Custom Holiday</string>
    <string name="enter_leave_type">Enter Leave Type</string>
    <string name="date_">Date:</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="sick_leave">SICK LEAVE</string>
    <string name="casual_leave">CASUAL LEAVE</string>
    <string name="paid_leave">PAID LEAVE</string>
    <string name="optional_leave">OPTIONAL LEAVE</string>
    <string name="leave_history">Leave History</string>
    <string name="tracking_time">TRACKING TIME</string>
    <string name="minimum_daily_working_hrs">Minimum Daily Working Hours</string>
    <string name="average_working_working_hour">Average Working Hours</string>
    <string name="saturday_working_policy">Saturday Working Policy</string>
    <string name="saturday1">Saturday 1</string>
    <string name="saturday2">Saturday 2</string>
    <string name="saturday3">Saturday 3</string>
    <string name="saturday4">Saturday 4</string>
    <string name="saturday5">Saturday 5</string>
    <string-array name="location_type">
        <item>Office</item>
        <item>Vendor</item>
        <item>Customer</item>
    </string-array>
    <string-array name="manualAttendance_type">
        <item>Full Day</item>
        <item>Half Day</item>
    </string-array>
    <string name="manualattendance">Manual Attendance</string>
    <string name="leavetype">Leave Type</string>
    <string name="checkintime">Check-In Time</string>
    <string name="checkouttime">Check-Out Time</string>
    <string name="reason">Reason</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="attendancehistory">Attendance History</string>
    <string name="select_attendance_type">Select Type</string>
    <string name="leave_detail">Leave Details</string>
    <string name="leave_withdraw">Withdraw</string>
    <string name="total_leaves">Total Leaves</string>
    <string name="available_leaves">Available Leaves</string>
    <string name="used_leaves">Used leaves</string>
    <string name="update_time">Update Time Details</string>
    <string name="oldtime_in">Old In</string>
    <string name="oldtime_out">Old Out</string>
    <string name="newtime_in">New In</string>
    <string name="newtime_out">New Out</string>
    <string name="export_csv">Export to Excel</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="select_vendor">Select Vendor/Customer</string>
    <string name="select_address">Select Address</string>
    <string name="vendor_client">CUSTOMER/VENDOR</string>
    <string name="updated_location">Updated Location</string>
    <string name="location">LOCATION</string>
    <string name="save_location">Save</string>
    <string name="work_location">Work Location</string>
    <string name="time_in">IN</string>
    <string name="time_out">OUT</string>
    <string name="no_leave_applied">No leave has been applied yet!!!</string>
    <string name="manual_request">MANUAL REQUEST</string>
    <string name="time">TIME</string>
    <string name="always_allow">Always allow attendance from here</string>
    <string name="check_in">CHECK-IN</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="from_date">FROM</string>
    <string name="till_date">TILL</string>
    <string name="full_day">Full Day</string>
    <string name="half_day">Half Day</string>
    <string name="leave_type">TYPE</string>
    <string name="update_balance">UPDATE LEAVE BALANCE</string>
    <string-array name="leave_types">
        <item>Sick Leave</item>
        <item>Casual Leave</item>
        <item>Paid Leave</item>
        <item>Optional Leave</item>
    </string-array>
    <string name="allowances">Allowances</string>
    <string name="of_ctc">% of CTC</string>
    <string name="of_basic">% of Basic</string>
    <string name="conveyance">Conveyance</string>
    <string name="rs">Rs.</string>
    <string name="rs_per_month">Rs. per Month</string>
    <string name="rs_per_annum">Rs. per Annum</string>
    <string name="medical">Medical</string>
    <string name="telephone">Telephone</string>
    <string name="lta">LTA</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="datetimeformat">DD:MM:YY HH:MM</string>
    <string name="Attendance">ATTENDANCE</string>
    <string name="Leave">Leaves</string>
    <string name="checkin">CHECK-IN</string>
    <string name="checkout">CHECK-OUT</string>
    <string name="manualrequest">Manual Request</string>
    <string name="history">HISTORY</string>
    <string name="applyforleave">Apply for Leave</string>
    <string name="leavestatus">LEAVE STATUS</string>
    <string name="leavebalance">Leave Balance</string>
    <string name="description">DESCRIPTION</string>
    <string name="notification">Notification</string>
    <string name="notification_details">Notification Details</string>
    <string name="address">ADDRESS</string>
    <string name="select_location">Select Location</string>
</resources>