<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_header"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notification_details"
        android:layout_margin="@dimen/medium_margin"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/medium_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="@dimen/textmedium"
            android:layout_margin="@dimen/medium_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".7"
            android:text="Task Status Update"
            android:background="@color/cream"
            android:padding="@dimen/medium_margin" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/medium_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/textmedium"
            android:layout_margin="@dimen/medium_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".7"
            android:lines="7"
            android:padding="@dimen/medium_margin"
            android:background="@color/cream"
            android:text=" Task Completed Successfully" />
    </LinearLayout>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btnselector"
        android:padding="@dimen/medium_margin"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:id="@+id/btn_ok" />
</LinearLayout>
